[package]
name = "bevy_4x_camera"
version = "0.1.2"
authors = ["Sarthak Singh <ss269@uw.edu>"]
edition = "2018"
description = "A 4X style camera for bevy"
homepage = "https://github.com/SarthakSingh31/bevy_4x_camera"
keywords = ["game", "gamedev", "camera", "bevy"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SarthakSingh31/bevy_4x_camera"

[dependencies]
# bevy = "0.5"
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = ["render"] }

[dev-dependencies]
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking.git" }
# bevy_mod_picking = "0.3.5"
# Panics on web without these.
rand = { version = "0.7.0" }
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
